JumpScript/tests/baselines/reference/parserAccessibilityAfterStatic6.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic6.jump(3,14): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic6.jump (1 errors) ====
    class Outer
    {
    static public
                 
!!! error TS1005: '}' expected.